<resources>
    <string name="hello">你好，</string>
    <string name="icon">图标</string>
    <string name="app_name">GWeather</string>
    <string name="homePage">主界面</string>
    <string name="deviceInfPage">设备信息</string>
    <string name="login_page">登录</string>
    <string name="support_bluetooth">支持蓝牙</string>
    <string name="is_turn_on">蓝牙状态</string>
    <string name="turn_on">打开蓝牙</string>
    <string name="turn_off">关闭蓝牙</string>
    <string name="room_name">房间名称</string>
    <string name="device_status">设备状态</string>
    <string name="device_status_setting">设备状态设置</string>
    <string name="window_angle_control">角度调整</string>
    <string name="bluetooth">蓝牙</string>
    <string name="test">测试</string>
    <string name="bonded_bluetooth">已绑定设备</string>
    <string name="available_device">可用设备</string>
    <string name="available_bluetooth">可用蓝牙</string>
    <string name="find">查找</string>
    <string name="bluetooth_visibility">蓝牙可见性</string>
    <string name="find_bluetooth">查找蓝牙</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="smart_home">智能家</string>
    <string name="temperature">温度</string>
    <string name="illumination">光照</string>
    <string name="rain">雨水</string>
    <string name="humidity">湿度</string>
    <string name="environmental_quality_index">环境指数</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="equipment_management">设备管理</string>
    <string name="data">数据</string>
    <string name="home">首页</string>
    <string name="user">用户</string>
    <string name="user_name">用户名</string>
    <string name="user_information">用户信息</string>
    <string name="form_activity_range">窗体活动范围</string>
    <string name="Remaining_window_activity_range">剩余窗体活动范围</string>
    <string name="amount_cap">活动范围</string>
    <string name="remaining_amount_total">剩余活动范围</string>
    <string name="windows_control_unit">窗体控制模块</string>
    <string name="middle">中</string>
    <string name="air_quality">空气质量</string>
    <string name="pollution_level">污染程度</string>
    <string name="refresh">刷新数据</string>
    <string name="wind_speed">风速</string>
    <string name="cloudiness">云量</string>
    <string name="wind_direction_degree">风向角度</string>
    <string name="windows_icon">窗户图标</string>
    <string name="windows_switch">窗户开关</string>
    <string name="room_picture">房间图片</string>
    <string name="normal_switch">开关</string>
    <string name="current_time">%1$d年%2$d月%3$d日%4$d时%5$d分%6$d秒</string>
    <string name="now_device_status">设备当前状态%1s</string>
    <string name="device_information">设备信息</string>
    <string name="test_module">测试模块</string>
    <string name="bluetooth_image">蓝牙图片</string>
    <string name="smart_windows">智能窗</string>
    <string name="inf_icon">信息图标</string>
    <string name="device_status_icon">设备状态图标</string>
    <string name="angle_icon">角度调整</string>
    <string name="weather_icon">天气图标</string>
    <string name="null_string"> </string>
    <string name="weather">天气</string>
    <string name="title_background_picture">标题栏背景图</string>
    <string name="turn_on_or_turn_off_bluetooth">打开或关闭蓝牙</string>
    <string name="find_bluetooth_device">查找蓝牙设备</string>
    <string name="author">Sakurajima Mai</string>
    <string name="authorMail">SakurajimaMai@gmail.com</string>
    <string name="profile_picture">用户头像</string>
    <string name="or_en">or</string>
    <string name="forgot_password_en">Forgot password?</string>
    <string name="welcome_en">Welcome!</string>
    <string name="create_user">创建账户</string>
    <string name="add_city">添加城市</string>
    <string name="add_account">创建账户</string>
    <string name="takisukaze_en">Takisukaze</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bond">未绑定</string>
    <string name="bonded">已绑定</string>
    <string name="animation">动画</string>
    <string name="other_setting_icon">其他设置图标</string>
    <string name="close_windows_in_rainy_days">雨天关窗</string>
    <string name="close_windows_in_wind_days">大风关窗</string>
    <string name="other_setting">其他设置</string>
    <string name="update">更新于</string>
    <string name="address">地址</string>
    <string name="visibility">能见度</string>
    <string name="wind_direction_text">风向文字</string>
    <string name="bluetooth_icon">蓝牙图标</string>
    <string name="search_manager_city">搜索或添加城市</string>
    <string name="commonly_used_functions">常用功能</string>
    <string name="device_name">设备名称</string>
    <string name="device_room_name">设备所在房间</string>
    <string name="emergency_window_closing">紧急关窗</string>
    <string name="description_of_emergency_window_closing">当发生紧急情况时间紧急关窗,以避免危险状况的发生</string>
    <string name="details">查看详情</string>
    <string name="prompt_inf">提示信息</string>
    <!--侧边栏-->
    <string name="nav_menu_mail">邮件</string>
    <string name="nav_menu_location">定位</string>
    <string name="nav_menu_exit">退出</string>
    <string name="nav_menu_setting">设置</string>
    <!--图标名称-->
    <string name="ic_search_city">搜索城市</string>
    <string name="ic_add_city">添加城市</string>
    <string name="ic_bluetooth_disabled">关闭蓝牙</string>
    <string name="ic_clear_list">清除列表</string>
    <!--指令语句-->
    <string name="please_enter_username">请输入用户名</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_enter_tel">请输入电话</string>
    <string name="please_enter_email">请输入邮箱</string>
    <!--窗户状态-->
    <string name="now_windows_connect_status">连接状态</string>
    <string name="now_windows_angle">开启角度</string>
    <string name="now_no_device_connect">当前无设备连接</string>
    <string name="now_is_emergency_close">现在处于紧急关窗状态,所有设置处于锁定状态,再次点击按钮即可恢复</string>
    <!--控制数值-->
    <string name="connected_en">Connected</string>
    <string name="disconnected_en">Not Connected</string>
    <string name="connected_hans">已连接</string>
    <string name="disconnected_hans">未连接</string>
    <string name="open_hans">开启</string>
    <string name="close_hans">关闭</string>
    <string name="open_en">open</string>
    <string name="close_en">close</string>
    <string name="device_list">设备列表</string>
    <!--初始数值-->
    <string name="initial_angle">0°</string>
    <!--图标-->
    <!--ManagerDeviceActivity页面-->
    <string name="MDA_ic_angle">&#xe635;</string>
    <string name="MDA_ic_connected">&#xe639;</string>
    <string name="MDA_ic_disconnect">&#xe615;</string>
    <string name="MDA_ic_wind">&#xe60f;</string>
    <string name="MDA_ic_rain">&#xe622;</string>
    <string name="MDA_ic_window">&#xe711;</string>
    <string name="MDA_ic_open">&#xe616;</string>
    <string name="MDA_ic_close">&#xe604;</string>
    <!--AngleControlDialogFragment页面图标-->
    <string name="ACDF_ic_direction_left">&#xe68c;</string>
    <string name="ACDF_ic_warning_filling">&#xe70e;</string>
    <!--GoogleMaterial ic bluetooth-->
    <string name="GoogleMaterial_ic_bluetooth_connected">&#xeba4;</string>
    <string name="GoogleMaterial_ic_bluetooth">&#xeba5;</string>
    <string name="GoogleMaterial_ic_bluetooth_searching">&#xeba6;</string>
    <string name="GoogleMaterial_ic_bluetooth_disabled">&#xebb2;</string>
    <string name="GoogleMaterial_ic_phone_bluetooth_speaker">&#xebe6;</string>
    <string name="GoogleMaterial_ic_settings_bluetooth">&#xebf7;</string>
    <string name="GoogleMaterial_ic_bluetooth_audio">&#xe61f;</string>

    <string name="daily_high_temperature">最高温度%s℃</string>
    <string name="daily_low_temperature">最低温度%s℃</string>
    <string name="daily_humidity">湿度%s％</string>
    <string name="daily_rain">降雨量%smm</string>
    <string name="weather_forecast_for_the_last_five_days">最近五天的天气预报</string>
    <string name="click_to_view_the_weather_details_of_the_day">查看今日天气详情</string>
    <string name="city">城市</string>
    <string name="today_weather">今日天气</string>
</resources>