<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">
        <TextView
            android:layout_marginTop="80sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <LinearLayout
            android:id="@+id/userLinearLayout"
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                style="@style/CustomizeEditView"
                android:hint="@string/please_enter_username"
                android:textSize="13sp"
                android:inputType="text"
                android:autofillHints="TODO"
                android:alpha="0.9"
                android:drawableStart="@drawable/ic_user"/>
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomizeEditView"
                android:textColorHint="@color/black"
                android:hint="@string/please_enter_password"
                android:textSize="13sp"
                android:inputType="textPassword"
                android:autofillHints="TODO"
                tools:ignore="LabelFor"
                android:alpha="0.9"
                android:drawableStart="@drawable/ic_password"/>
            <EditText
                android:id="@+id/telEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomizeEditView"
                android:textColorHint="@color/black"
                android:hint="@string/please_enter_tel"
                android:textSize="13sp"
                android:inputType="phone"
                android:autofillHints="TODO"
                tools:ignore="LabelFor"
                android:alpha="0.9"
                android:drawableStart="@drawable/ic_tel"/>
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomizeEditView"
                android:textColorHint="@color/black"
                android:hint="@string/please_enter_email"
                android:textSize="13sp"
                android:inputType="textEmailAddress"
                android:autofillHints="TODO"
                tools:ignore="LabelFor"
                android:alpha="0.9"
                android:drawableStart="@drawable/ic_email"/>
            <Button
                android:id="@+id/createAccountButton"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="12sp"
                android:textColor="@color/main_dark_blue"
                android:background="@drawable/button_white_background_selector"
                android:alpha="0.9"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>