<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">
        <TextView
            android:layout_marginBottom="150sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/loginLinearLayout"
            app:layout_constraintBottom_toTopOf="@id/loginLinearLayout"
            android:text="@string/welcome_en"
            android:textColor="@color/main_dark_blue"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_marginStart="10sp"/>
        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_margin="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".activity.SignInActivity"
            tools:ignore="UselessParent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <EditText
                android:layout_margin="15sp"
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:padding="5dp"
                android:hint="@string/please_enter_username"
                android:textSize="13sp"
                android:background="@drawable/edit_text_white_background_selector"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10sp"
                tools:ignore="LabelFor"
                android:inputType="text"
                android:autofillHints=""
                android:alpha="0.9"/>
            <EditText
                android:layout_marginTop="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:padding="5dp"
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:inputType="textPassword"
                android:hint="@string/please_enter_password"
                android:textSize="13sp"
                android:background="@drawable/edit_text_white_background_selector"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10sp"
                tools:ignore="LabelFor"
                android:autofillHints=""
                android:alpha="0.9"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/main_dark_blue"
                    android:layout_marginEnd="5sp"
                    android:layout_marginBottom="20sp"
                    android:text="@string/forgot_password_en"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                style="?android:attr/buttonStyle"
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:background="@drawable/button_dark_blue_background_selector"
                android:alpha="0.9"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/main_dark_blue"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/main_dark_blue"
                    android:layout_margin="5sp"
                    android:text="@string/or_en"
                    android:layout_gravity="center_vertical"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:background="@color/main_dark_blue" />
            </LinearLayout>
            <Button
                style="?android:attr/buttonStyle"
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:textColor="@color/main_dark_blue"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:background="@drawable/button_white_background_selector"
                android:alpha="0.9"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>