<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        tools:context=".activity.StartActivity">
        <!--        <com.example.takisukaze.view.CustomVideoView-->
        <!--            android:id="@+id/videoView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"/>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:layout_marginStart="10sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:layout_marginStart="10sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="G天气"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/subTitleTextView"/>
        <TextView
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="30sp"
            android:id="@+id/subTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This software is designed and produced by Gui Haoyang"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonLinearLayout"/>
        <LinearLayout
            android:id="@+id/buttonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:layout_marginBottom="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp">
            <Button
                android:layout_marginBottom="10sp"
                style="?android:attr/buttonStyle"
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:textColor="@color/main_dark_blue"
                android:background="@drawable/button_white_background_selector"/>
            <Button
                style="?android:attr/buttonStyle"
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_dark_blue_background_selector"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>