<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 被依赖view （dependency）-->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/main_dark"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                app:titleEnabled="true">
                <!-- 可伸缩背景图布局文件 -->
                <LinearLayout
                    android:id="@+id/anime_root"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax"
                    android:background="@drawable/title_background">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_weather"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_horizontal"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                        <ImageView
                            android:id="@+id/weatherIcon"
                            android:layout_width="100sp"
                            android:layout_height="100sp"
                            android:contentDescription="@string/weather_icon"
                            android:src="@drawable/sun"
                            android:layout_gravity="center_vertical"/>
                        <com.william.gradient.GradientTextView
                            android:id="@+id/temperatureValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="70sp"
                            android:textStyle="bold"
                            app:gradient_animate="false"
                            app:gradient_direction="topToBottom"
                            app:gradient_endColor="#FFFFFF"
                            app:gradient_speed="normal"
                            app:gradient_startColor="#FFFFFF"
                            android:layout_margin="10dp"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/weatherValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- 界面布局文件 作用view （child）-->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@drawable/main_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MyCardView"
                    android:alpha="0.8">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/see_today_weather"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@color/main_dark_blue">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/click_to_view_the_weather_details_of_the_day"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="italic"
                            android:layout_margin="10dp"
                            android:layout_gravity="center_vertical"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_right_arrow"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:contentDescription="@string/icon" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/daily_weather_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>